http://java.net/jira/browse/JAVASERVERFACES_SPEC_PUBLIC-730
I simply could not bring myself to require XML for a new feature in JSF
2.2 at this point in time.  There is no excuse for it.

This commit adds the ability to define a flow programmatically using a
FlowBuilder API.  Here is a usage example.

@Named("FlowA")
@FlowDefinition
public class FlowA implements Serializable {
    
    private static final long serialVersionUID = -7623501087369765218L;

    public FlowA() {
    }
    
    public Flow defineFlow(FacesContext context, FlowBuilder flowBuilder) {
        
        flowBuilder.id("flow-a");
        flowBuilder.returnNode("taskFlowReturn1").navigationCase().
                fromOutcome("#{flow_a_Bean.returnValue}");
        flowBuilder.inboundParameter("param1FromFlowB", "#{facesFlowScope.param1Value}");
        flowBuilder.inboundParameter("param2FromFlowB", "#{facesFlowScope.param2Value}");
        flowBuilder.flowCallNode("callB").flowReference("flow-b").
                outboundParameter("param1FromFlowA", "param1Value").
                outboundParameter("param2FromFlowA", "param2Value");
        
        return flowBuilder.getFlow();
    }
    
}

I'm still not entirely happy about it.  For example, it doesn't seem
right to be specifying parameters like this when you're in Java code
already.  Nonetheless, it's much better than XML.

SECTION: API Changes
----------------------------

M       jsf-api/src/main/java/javax/faces/flow/Parameter.java

- Separate interface from impl.

A       jsf-api/src/main/java/javax/faces/flow/FlowBuilder.java

- The new builder API.

A  +    jsf-api/src/main/java/javax/faces/flow/FlowDefinition.java

- An annotation that marks a CDI bean that defines a flow using the
  FlowBuilder API.

SECTION: Modified Files
----------------------------
A  +    jsf-ri/src/main/java/com/sun/faces/flow/FlowDiscoveryCDIExtension.java
M       jsf-ri/conf/share/javax.enterprise.inject.spi.Extension
        
*  This is the hook into the boo